# configure-cmake-boost-openssl-https

./: .gitignore  README.md  instruction.md  task.toml
environment/: CMakeLists.txt  Dockerfile  main.cpp
solution/: solve.sh
tests/: test.sh  test_outputs.py
